--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -210,7 +210,7 @@
         <div class="nav-item" id="menu-tokoh">Tambah Tokoh</div>
         
         <div style="margin-top: auto;">
-            <a href="index.html" class="nav-item" style="display: block; text-decoration: none; text-align: center; border: 1px solid var(--border-light);">
+            <a href="map.html" class="nav-item" style="display: block; text-decoration: none; text-align: center; border: 1px solid var(--border-light);">
                 ← Kembali ke Peta
             </a>
         </div>
