feat: role besides verif/admin can't open dashboard

--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -217,7 +217,7 @@
         
         <div id="view-verif-situs" class="view-section">
             <h1>Verifikasi Situs Tertunda</h1>
-            <div id="pending-list-situs">  Ganti ID container -->
+            <div id="pending-list-situs"> 
                 <p>Memuat data...</p>
             </div>
         </div>
@@ -251,7 +251,6 @@
                     <form id="form-kecamatan">
                         <div class="form-group">
                             <label>Induk Kota/Kabupaten</label>
-                             ID Khusus Admin -->
                             <select id="adm-select-kota-kec" required style="width:100%; padding:10px; border-radius:6px; border:1px solid #e5e7eb;">
                                 <option value="">Memuat...</option>
                             </select>
