--- a/frontend/guide.html
+++ b/frontend/guide.html
@@ -76,7 +76,7 @@
     <nav>
         <div class="logo"><i class="fa-solid fa-layer-group"></i> ArkeoGIS</div>
         <div class="nav-links">
-            <a href="home.html">Beranda</a>
+            <a href="index.html">Beranda</a>
             <a href="guide.html" style="color: #2563eb;">Panduan</a>
             <a href="index.html" class="btn-login">Masuk ke Peta</a>
         </div>
